error handling for bad password (now with retry)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,13 +23,14 @@
             android:windowSoftInputMode="adjustResize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
-
+				<action android:name="android.intent.action.PICK" />
                 <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.SEND" />
+                <action android:name="android.intent.action.GET_CONTENT" />
 
                 <data
                     android:host="*"
@@ -40,7 +41,10 @@
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
 
+                <action android:name="android.intent.action.PICK" />
                 <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.SEND" />
+                <action android:name="android.intent.action.GET_CONTENT" />
 
                 <data
                     android:host="*"
