--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
+        android:theme="@style/Theme.Sherlock" >
         <activity
             android:name=".PixelKnotActivity"
             android:label="@string/app_name"
@@ -53,6 +53,7 @@
                     android:scheme="file" />
             </intent-filter>
         </activity>
+        <activity android:name=".Preferences" />
     </application>
 
 </manifest>
