--- a/project.properties
+++ b/project.properties
@@ -11,5 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-9
+target=android-16
 android.library.reference.1=../../LIBS/f5Android
+android.library.reference.2=../../../Documents/workspace/ActionBarSherlock
