--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=Google Inc.:Google APIs:16
 android.library.reference.1=external/F5Android
-android.library.reference.2=../ActionBarSherlock/library
+android.library.reference.2=external/ActionBarSherlock/library
