--- a/app/project.properties
+++ b/app/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=Google Inc.:Google APIs:16
-android.library.reference.1=external/F5Android
-android.library.reference.2=external/ActionBarSherlock/library
+android.library.reference.1=../external/F5Android
+android.library.reference.2=../external/ActionBarSherlock/library
