--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="info.guardianproject.pixelknot"
     android:versionCode="2"
-    android:versionName="0.3-RC1" >
+    android:versionName="0.3" >
 
     <uses-sdk
         android:minSdkVersion="9"
