--- a/PixelKnot/build.gradle
+++ b/PixelKnot/build.gradle
@@ -19,11 +19,18 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'aar'
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    //compile 'com.squareup.picasso:picasso:2.5.2'
+    compile(name:'picasso-2.6.0', ext:'aar')
     compile project(path: ':external:F5Android')
 }
