--- a/.tx/config
+++ b/.tx/config
@@ -1,6 +1,6 @@
 [main]
 host = https://www.transifex.com
-lang_map = fa_IR: fa, fr_FR: fr, nl_NL: nl, pl_PL: pl, pt_BR: pt, pt_PT: pt-rPT, sl_SI: sl, nb_NO: nb-rNO, zh_TW: zh-rTW
+lang_map = de_DE: de, el_GR: el, es_ES: es, fa_IR: fa, fr_FR: fr, hu_HU: hu, ja_JA: ja, nl_NL: nl, pl_PL: pl, pt_BR: pt, pt_PT: pt-rPT, ro_RO: ro, ru_RU: ru, sl_SI: sl, nb_NO: nb-rNO, zh_TW: zh-rTW
 
 
 [pixelknot.stringsxml]
