--- a/.tx/config
+++ b/.tx/config
@@ -4,7 +4,7 @@ lang_map = fa_IR: fa, fr_FR: fr, nl_NL: nl, pl_PL: pl, pt_BR: pt, pt_PT: pt-rPT,
 
 
 [pixelknot.stringsxml]
-file_filter = app/res/values-<lang>/strings.xml
+file_filter = PixelKnot/src/main/res/values-<lang>/strings.xml
 host = https://www.transifex.com
-source_file = app/res/values/strings.xml
+source_file = PixelKnot/src/main/res/values/strings.xml
 source_lang = en
