--- a/.tx/config
+++ b/.tx/config
@@ -8,3 +8,9 @@ file_filter = PixelKnot/src/main/res/values-<lang>/strings.xml
 host = https://www.transifex.com
 source_file = PixelKnot/src/main/res/values/strings.xml
 source_lang = en
+
+[pixelknot.play-store]
+file_filter = fastlane/metadata/android/<lang>/full_description.txt
+host = https://www.transifex.com
+source_file = fastlane/metadata/android/en-US/full_description.txt
+source_lang = en-US
