--- a/PixelKnot/build.gradle
+++ b/PixelKnot/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "info.guardianproject.pixelknot"
-        minSdkVersion 17
-        targetSdkVersion 25
+        minSdkVersion 21
+        targetSdkVersion 30
         versionCode 101
         versionName "1.0.1"
     }
@@ -19,18 +19,12 @@ android {
     }
 }
 
-repositories {
-    flatDir {
-        dirs 'aar'
-    }
-}
-
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.android.support:design:25.0.0'
-    //compile 'com.squareup.picasso:picasso:2.5.2'
-    compile(name:'picasso-2.6.0', ext:'aar')
-    compile project(path: ':external:F5Android')
+
+    testImplementation 'junit:junit:4.13.2'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.github.guardianproject:F5Android:0.1'
+
 }
