--- a/gradle.properties
+++ b/gradle.properties
@@ -13,4 +13,6 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Thu Aug 25 11:01:15 CEST 2016
+android.enableJetifier=true
+android.useAndroidX=true
 android.useDeprecatedNdk=true
