fix issue with query intent and add Signal and Telegram to preferred apps list

--- a/PixelKnot/src/main/AndroidManifest.xml
+++ b/PixelKnot/src/main/AndroidManifest.xml
@@ -8,8 +8,16 @@
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="18" />
+
     <uses-permission android:name="android.permission.VIBRATE" android:maxSdkVersion="18"/>
     <uses-feature android:name="android.hardware.camera" android:required="false" />
+
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.SEND" />
+            <data android:mimeType="image/jpeg" />
+        </intent>
+    </queries>
 
     <application
         android:name=".App"
